--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         margin: 1em 0em;
       }
     </style>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
     <div class="textColumn">
