--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>お前が信じる・・お前を信じろ・・・</h1>
+      <h1>お前が信じる・・・<br>お前を信じろ・・・</h1>
       <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
